--- a/bootstrap.html
+++ b/bootstrap.html
@@ -111,9 +111,7 @@ header .overlay {
         <p>白貓project</p>
         <p>好玩，好舒適，好優質！</p>
         <p>新手不會打讓本大佬帶你飛！</p>
-        <p class="mb-0">
-          現在就加入吧！<a href="https://colopl.co.jp/shironekoproject/>按我>w<</a>
-        </p>
+        <p>現在就加入吧！<a href="https://colopl.co.jp/shironekoproject/>按我>w<</a></p>
       </div>
     </div>
   </div>
