--- a/bootstrap.html
+++ b/bootstrap.html
@@ -8,7 +8,46 @@
   <meta name="googlebot" content="noindex, nofollow">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="#">白貓project</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">故事<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">玩法</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">角色</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">職業</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" href="#">劍</a>
+              <a class="dropdown-item" href="#">拳</a>
+              <a class="dropdown-item" href="#">槍</a>
+              <a class="dropdown-item" href="#">斧</a>
+              <a class="dropdown-item" href="#">弓</a>
+              <a class="dropdown-item" href="#">法</a>
+<a class="dropdown-item" href="#">雙刀</a>     
+              <a class="dropdown-item" href="#">龍騎</a>      
+              <a class="dropdown-item" href="#">變身士</a>      
+            <a class="dropdown-item" href="#">大劍</a>         
+              <a class="dropdown-item" href="#">輝劍</a>   
+            </div>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>  
   <script
     type="text/javascript"
     src="/js/lib/dummy.js"
@@ -92,7 +131,7 @@ header .overlay {
     <header>
   <div class="overlay"></div>
   <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-    <source src="https://drive.google.com/open?id=1nCxS9w0heivw6k3nduGXLZcmH2J3UNQi"type="video/mp4">
+<img src="https://p2.bahamut.com.tw/B/2KU/20/c621e7ad0344d8ea84e223542611khg5.JPG">
   </video>
   <div class="container h-100">
     <div class="d-flex h-100 text-center align-items-center">
