--- a/bootstrap.html
+++ b/bootstrap.html
@@ -34,10 +34,10 @@
               <a class="dropdown-item" href="#">斧</a>
               <a class="dropdown-item" href="#">弓</a>
               <a class="dropdown-item" href="#">法</a>
-<a class="dropdown-item" href="#">雙刀</a>     
+              <a class="dropdown-item" href="#">雙刀</a>     
               <a class="dropdown-item" href="#">龍騎</a>      
               <a class="dropdown-item" href="#">變身士</a>      
-            <a class="dropdown-item" href="#">大劍</a>         
+              <a class="dropdown-item" href="#">大劍</a>         
               <a class="dropdown-item" href="#">輝劍</a>   
             </div>
           </li>
@@ -149,7 +149,8 @@ header .overlay {
         <p>白貓project</p>
         <p>好玩，好舒適，好優質！</p>
         <p>新手不會打讓本大佬帶你飛！</p>
-        <p>現在就加入吧！<a href="https://colopl.co.jp/shironekoproject/>按我>w<</a></p>
+        <p>現在就加入吧！</p>
+          <p><a href="https://colopl.co.jp/shironekoproject/>按我>w<</a></p>
       </div>
     </div>
   </div>
