--- a/bootstrap.html
+++ b/bootstrap.html
@@ -150,7 +150,7 @@ header .overlay {
         <p>好玩，好舒適，好優質！</p>
         <p>新手不會打讓本大佬帶你飛！</p>
         <p>現在就加入吧！</p>
-          <p><a href="https://colopl.co.jp/shironekoproject/>按我>w<</a></p>
+ <a href="https://colopl.co.jp/shironekoproject/">按我＞ｗ＜</a>
       </div>
     </div>
   </div>
