--- a/bootstrap.html
+++ b/bootstrap.html
@@ -131,7 +131,7 @@ header .overlay {
     <header>
   <div class="overlay"></div>
   <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
-<img src="https://p2.bahamut.com.tw/M/2KU/20/c621e7ad0344d8ea84e223542611khg5.JPG">
+<img src="https://p2.bahamut.com.tw/M/2KU/20/c621e7ad0344d8ea84e223542611khg5.JPG" class="img-rounded">
   <div class="container h-100">
     <div class="d-flex h-100 text-center align-items-center">
       <div class="w-100 text-white">
