--- a/bootstrap.html
+++ b/bootstrap.html
@@ -129,7 +129,6 @@ header .overlay {
 </head>
 <body>
     <header>
-<video loop="true" autoplay="autoplay"  muted="true">
 <div class="container">
 <div class="embed-responsive embed-responsive-4by3">
  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/oanjR-52mrw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -137,7 +136,7 @@ header .overlay {
         <p class="lead mb-0">～世界，就託付在你的手中～</p>
 </video>
       </div>
-
+      </div>
 
 </header>
 
